@@ -54,6 +54,8 @@
       }
     </style>
 
+    <link type="text/css" rel="stylesheet" media="print" href="${BASE_URL}/print.css" />
+
   <!-- Favicon -->
   <link rel="shortcut icon" href="${BASE_URL}/favicon.ico">
 
