@@ -35,6 +35,8 @@ Current (0.1.1-beta)
 	- Add content of post in RSS file
 	- Minisch theme improvements: date, escaped_title, labels for each post, etc.
 	- Add datetime as new value
+	- Add CSS that permit to define a printing version of the weblog (for
+	  default theme and minisch theme)
 
 Version 0.1 (released 2012-07-17)
 	- RSS feed
